syntax = "proto3";

//import "google/protobuf/timestamp.proto-go";
//import "google/api/annotations.proto";

service Node {
  rpc AddVM(VMData) returns (Result){
  }
  rpc DeleteVM (VMData) returns (Result){
  }
  rpc UpdateVM (VMData) returns (Result){
  }
  rpc StatusVM(VMStatus) returns (Result){
  }
  rpc GetVM (VMData) returns (VMData){
  }
  rpc GetAllVM (Null) returns (stream VMData){
  }
  rpc AddStorage(StorageData) returns (stream Result){
  }
  rpc DeleteStorage(StorageData) returns (Result){
  }
  rpc UpdateStorage(StorageData) returns (Result){
  }
  rpc GetStorage (StorageData) returns (StorageData){
  }
  rpc GetAllStorage (Null) returns (stream StorageData){
  }
  rpc AddNet(NetData) returns (Result){
  }
  rpc DeleteNet(NetData) returns (Result){
  }
  rpc UpdateNet(NetData) returns (Result){
  }
  rpc GetNet (NetData) returns (NetData){
  }
  rpc GetAllNet (Null) returns (stream NetData){
  }
  rpc AddNIC(NICData) returns (Result){
  }
  rpc DeleteNIC(NICData) returns (Result){
  }
  rpc UpdateNIC(NICData) returns (Result){
  }
  rpc GetNIC (NICData) returns (NICData){
  }
  rpc GetAllNIC (Null) returns (stream NICData){
  }
  rpc StopNode(Null)returns (Result){
  }
}

message Null{

}

message VMData{
  int64 ID = 1;
  string Name = 2;
  int64 GroupID = 3;
  int32 CPU = 4;
  int32 Mem = 5;
  string ISO = 6;
  repeated StorageData Storage = 7;
  repeated NetData Net = 8;
  bool AutoStart = 9;
}

message StorageData{
  int64 ID = 1;
  string Name = 2;
  int64 GroupID = 3;
  int32 Driver = 4; //1:virtio
  int32 Mode = 5; //1~9:AutoMode 10:ManualMode
  string Path = 6; //Only Manual Mode
  int64 MaxSize = 7;
  repeated SnapShot SnapShot = 8;
  string Image = 9; //image path
  bool Lock = 10;
}

message NetData{
  int64 ID = 1;
  string Name = 2;
  repeated int64 GroupID = 3;
  int32 VLAN = 4;
  int32 Option = 5; //1:Add 2:Delete
  bool Lock = 6;
}

message NICData{
  int64 ID = 1;
  string Name = 2;
  int64 GroupID = 3;
  int64 NetID = 4;
  string MacAddress = 5;
  int32 Driver = 6;
  bool Lock = 7;
}

message SnapShot {
  int64 ID = 1;
  string Tag = 2;
  int64 Size = 3;
  string Date = 4;
}

message VMStatus{
  int64 ID = 1;
  int32 mode = 2; //0:Start 1:Stop 2:Shutdown 3:Restart 4:HardReset 5:Pause 6:Resume 10:SnapShot
  int32 boot = 3; //0:DiskBoot 1:ISOBoot
  string option1 = 4; //not used...
  int64 option2 = 5; //snapshot ID
}

message Result{
  bool status = 1;
  string info = 2;
}